# Competitive-programming

./: .gitignore
acmp/: 0002.cpp  0029-minimized.cpp  0029.cpp  0038.cpp  0067.cpp  0076.cpp  0109.cpp  0111.cpp  0120.cpp  0122.cpp  0132.cpp  0133.cpp  0134.cpp  0140.cpp  0153.cpp  0171.cpp  0183-minimized.cpp  0183.cpp  0211-minimized.cpp  0211.cpp  0225.cpp  0228.cpp  0247.cpp  0280-minimized-2.cpp  0280-minimized.cpp  0280-minimized.cxx  0280.cpp  0281-2.cpp  0281.cpp  0338.cpp  0345.cpp  0346.cpp  0351.cpp  0355.cpp  0356.cpp  0360.cpp  0364.cpp  0370.cpp  0377.cpp  0378.cpp  (+24 more)
algorithms/merge/: merge.cpp
algorithms/z-function/: pi.cpp
bayan/bayan-2015/: a.out  c.cpp
chef/2017-may/: chefsuba.cpp
chef/snackdown-pre-elim-b/: sncoup.cpp  snelect.cpp  snsocial.cpp
chef/summer-code-challenge-innerve/: ahhouse.cpp  histosim.cpp  patrol.cpp  traverse.cpp
codeforces/: .gitignore  t.cpp
codeforces/1/: a.cpp  b.cpp  c.cpp
codeforces/11/: a.cpp  b.cpp  b.txt  c.cpp  d.cpp
codeforces/12/: a.cpp  b.cpp  c.cpp  e.cpp
codeforces/13/: a.cpp  c.cpp
codeforces/130/: b.cpp
codeforces/14/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
codeforces/16/: a.cpp  b.cpp  c.cpp  d.cpp
codeforces/17/: a.cpp  b.cpp  d.cpp
codeforces/170/: b.cpp
codeforces/18/: a.cpp  b.cpp  c.cpp  (+4 more)
hackerrank/: .gitignore
tc/: .gitignore
tc/m97/: .gitignore  CMakeLists.txt  PointsOnTheCircle.cpp  best-extractor.sh  points_solver.cpp  run.sh  run_one.sh
tc/m97/tester/: PointsOnTheCircleVis.java
uva/: .gitignore  10911-dp-bitmask.cpp  10911-max-input.txt  10911-recursive.cpp  11173.cpp
(+626 files in other folders)
